client/scss/imports/_dat-header.scss
// header for a single dat

.dat-header {
  padding-top: 1.25rem;
  padding-bottom: .75rem;
  border-bottom: 1px solid $color-neutral-10;
  background-color: $color-neutral-04;
  font-size: .8125rem;
}

.dat-header-actions-wrapper {
  @media only screen and (min-width: $md1) {
    float: right;
    margin-left: 2rem;
  }
}

.dat-header-action {
  display: inline-block;
  margin-left: 1rem;
  padding-top: .4rem;
  border: 0;
  font-size: .875rem;
  line-height: 1.25;
  background-color: transparent;
  color: $color-neutral-80;
  &:not([disabled]):hover, &:not([disabled]):focus {
    color: $color-neutral;
  }
  &:first-child {
    margin-left: 0;
    padding-left: 0;
  }
  &:disabled {
    opacity: 0.5;
  }
  svg,
  .btn__icon-img {
    width: 1rem;
    max-width: 1.25rem;
    max-height: 1rem;
  }
}

.share-link {
  display: flex;
  font-size: 1.375rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.dat-details {
  padding-top: 1.5rem;
  padding-bottom: .25rem;
}

.dat-detail {
  display: inline-block;
  margin-right: 1rem;
  color: $color-neutral-60;
  @media only screen and (min-width: $md1) {
    margin-right: 1.5rem;
  }
  p {
    margin-bottom: 0;
  }
}

